kubernetes/keep-alive/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: keep-alive
    app.kubernetes.io/instance: keep-alive
  name: keep-alive
