kubernetes/keep-alive/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: keep-alive
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-openshift-monitoring
  namespace: keep-alive
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: openshift-monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
        - namespaceSelector:
            matchLabels:
              name: openshift-user-workload-monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app: prometheus-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app: prometheus-truenas
      ports:
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 8083
        - protocol: TCP
          port: 9001
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-server
  namespace: keep-alive
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: openshift-kube-apiserver
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-kube-apiserver
      ports:
        - protocol: TCP
          port: 6443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-traffic
  namespace: keep-alive
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Egress
  podSelector: {}
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
          podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
      ports:
        - port: 5353
          protocol: UDP
        - port: 5353
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-egress
  namespace: keep-alive
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Egress
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0 # Egress Firewall Handles IPs/Domains
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
